fix:set the correct image render

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>   
 <body>
     <div  style="width: 614px ; height: 700px;" >
-       <img src="/static/images/7.jpg">
+       <img src="/static/images/7.jpg.jpg">
         <span>{{News|safe}}</span>
     </div>
     
